navigation & separate header styles

--- a/components/header.html
+++ b/components/header.html
@@ -1,9 +1,9 @@
 <h2>Erica</h2>
 <ul class="header-nav">
     <span class="header-nav-close">&#128473;</span>
-    <li class="header-nav-item">Home</li>
-    <li class="header-nav-item">About</li>
-    <li class="header-nav-item">Work</li>
+    <li class="header-nav-item" data-page="Home">Home</li>
+    <li class="header-nav-item" data-page="About">About</li>
+    <li class="header-nav-item" data-page="Work">Work</li>
 </ul>
 <span class="header-overlay"></span>
 <div>
