--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -66,6 +66,7 @@ body {
 }
 
 .container {
+    overflow-y: hidden;
 }
 
 button {
@@ -160,43 +161,6 @@ button {
 }
 
 /* Header */
-.header, .header-page {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    color: #fff;
-
-    &--name {
-        font-family: "Cookie", cursive;
-        font-weight: 400;
-        font-style: normal;
-
-        width: clamp(9rem, 7.663rem + 7.781vw, 17rem);
-    }
-
-    &--button {
-        font-size: clamp(0.75rem, 0.471rem + 1.626vw, 1.25rem);
-        cursor: pointer;
-    }
-
-    &--items {
-        display: none;
-        cursor: pointer;
-
-        .active {
-            border-bottom: 2px solid var(--tertiary-color);
-        }
-    }
-
-    &--item {
-        :hover {
-            transform: scale(0.96);
-        }
-    }
-
-}
-
 .page-header {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
