--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -62,6 +62,10 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  overflow-y: hidden;
+}
+
 button {
   color: #fff;
   border: none;
@@ -144,34 +148,6 @@ button {
 }
 
 /* Header */
-.header, .header-page {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  color: #fff;
-}
-.header--name, .header-page--name {
-  font-family: "Cookie", cursive;
-  font-weight: 400;
-  font-style: normal;
-  width: clamp(9rem, 7.663rem + 7.781vw, 17rem);
-}
-.header--button, .header-page--button {
-  font-size: clamp(0.75rem, 0.471rem + 1.626vw, 1.25rem);
-  cursor: pointer;
-}
-.header--items, .header-page--items {
-  display: none;
-  cursor: pointer;
-}
-.header--items .active, .header-page--items .active {
-  border-bottom: 2px solid var(--tertiary-color);
-}
-.header--item :hover, .header-page--item :hover {
-  transform: scale(0.96);
-}
-
 .page-header {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
