--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -116,6 +116,9 @@
   }
   .header-nav .active-item {
     border-bottom: 2px solid var(--primary-color);
+    color: var(--primary-color);
+    text-transform: none;
+    transform: scale(1);
   }
   .header-nav-close {
     display: none;
