--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <h2>Erica</h2>
 <ul class="header-nav">
-    <span class="header-nav-close">&#128473;</span>
+    <span class="header-nav-close"><i class="fa-solid fa-xmark"></i></span>
     <li class="header-nav-item" data-page="Home">Home</li>
     <li class="header-nav-item" data-page="About">About</li>
     <li class="header-nav-item" data-page="Work">Work</li>
