--- a/styles/food-galore/food-galore.css
+++ b/styles/food-galore/food-galore.css
@@ -1,3 +1,19 @@
 body {
-  background: #ffcfcf !important;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background: var(--secondary-color) !important;
+}
+
+.container {
+  width: 80vw;
+  height: 80vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  height: 90vh !important;
+  overflow-y: scroll !important;
 }/*# sourceMappingURL=food-galore.css.map */
