--- a/styles/header/header.scss
+++ b/styles/header/header.scss
@@ -47,6 +47,10 @@
             right: 2rem;
             font-size: 1.5rem;
             cursor: pointer;
+
+            i {
+                color: #fff;
+            }
         }
 
         &-item {
