--- a/styles/logo/logo.scss
+++ b/styles/logo/logo.scss
@@ -6,11 +6,12 @@ body {
     align-items: center;
     margin: 0;
 
-    background: #ffcfcf !important;
+    background: var(--secondary-color) !important;
 }
 
 .container {
     height: 90vh !important;
+    overflow-y: scroll !important;
 
     .header {
         position: sticky;
