--- a/styles/work/work.scss
+++ b/styles/work/work.scss
@@ -32,6 +32,7 @@
                 font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
 
                 display: flex;
+                align-items: center;
                 gap: 5px;
 
                 img {
