--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -34,6 +34,7 @@
                 padding: 10px;
 
                 display: flex;
+                align-items: center;
                 gap: 5px;
 
                 img {
