about me context

--- a/components/about.html
+++ b/components/about.html
@@ -2,13 +2,21 @@
     <img src="./assets/about-me.png" alt="About Me Picture">
     <div>
         <h1>Hi there!</h1>
-        <h3>Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis. </h3>
+        <h3>Welcome to my world of visual storytelling! I’m Erica Gaffud, a passionate Frontend Developer and UI/UX Designer 
+            with a keen eye for detail and a deep appreciation for authentic emotions. My work revolves around crafting 
+            seamless digital experiences that not only look visually stunning but also feel intuitive and engaging.
+        </h3>
     </div>
 </div>
 <div class="body-about__mycareer">
     <div class="body-about__mycareer__info">
         <h1>My Career So Far</h1>
-        <h3>Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</h3>
+        <h3>I have extensive experience designing and developing user-centered web and mobile applications. 
+            My background as a Frontend Developer honed my skills in creating responsive, mobile-first designs, 
+            while my work as a UI/UX Designer allowed me to craft intuitive and visually engaging interfaces. 
+            Leveraging tools like Figma, and user research methodologies, I specialize in delivering solutions 
+            that enhance user satisfaction and achieve business goals.
+        </h3>
     </div>
     <div class="body-about__mycareer__content">
         <span> UI Design </span>
