--- a/components/home.html
+++ b/components/home.html
@@ -1,8 +1,10 @@
 <div class="body-intro">
     <h1>Hi! I am <br> Erica Gaffud</h1>
-    <h3>Creating responsive and 
-        user-friendly web interfaces for over <span>2 years</span> as a
-        Software Developer
+    <h3>
+        <!-- Creating responsive and 
+        user-friendly web interfaces for over <span>2 years</span> as a <br> -->
+        <span class="role">Software Developer</span>
+        <span class="role">UI/UX Designer</span>
     </h3>
     <div class="body-intro-buttons">
         <button id="hireMe" class="primary_btn"> Hire Me </button>
@@ -22,8 +24,8 @@
             Know More About Me
         </button>
         <button class="primary_link">
-            <img src="./assets/icons/contact-icon.png" alt="Contact icon">
-            Contact
+            <img src="./assets/icons/work-icon.png" alt="Contact icon">
+            My Works
         </button>
     </div>
     <div class="body-footer-info">
