--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -176,7 +176,7 @@
             right: 0;
             z-index: -1;
             opacity: 0.4;
-            transform: translateX(60px);
+            // transform: translateX(60px);
         }
     }
 
