--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -10,10 +10,13 @@
   letter-spacing: 0.04em;
   line-height: 149.42%;
   font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
-  max-width: 26rem;
+  width: clamp(11rem, 4.015rem + 40.642vw, 30rem);
 }
-.body-intro h3 span {
-  font-weight: bold;
+.body-intro h3 .role {
+  border: 1px solid var(--accent-color);
+  border-radius: 5px;
+  padding-inline: 5px;
+  line-height: 25px;
 }
 .body-intro-buttons {
   display: flex;
@@ -91,7 +94,10 @@
   }
   .body-intro h3 {
     font-size: clamp(1.25rem, 0.964rem + 0.446vw, 1.5rem);
-    max-width: 32rem;
+  }
+  .body-intro h3 .role {
+    padding-inline: 10px;
+    padding-block: 5px;
   }
   .body-intro-buttons button {
     padding: 10px 40px;
