--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -12,10 +12,13 @@
             letter-spacing: 0.04em;
             line-height: 149.42%;
             font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
-            max-width: 26rem;
+            width: clamp(11rem, 4.015rem + 40.642vw, 30rem);
 
-            span {
-                font-weight: bold;
+            .role {
+                border: 1px solid var(--accent-color);
+                border-radius: 5px;
+                padding-inline: 5px;
+                line-height: 25px;
             }
         }
 
@@ -115,7 +118,11 @@
 
             h3 {
                 font-size: clamp(1.25rem, 0.964rem + 0.446vw, 1.5rem);
-                max-width: 32rem;
+
+                .role {
+                    padding-inline: 10px;
+                    padding-block: 5px;
+                }
             }
 
             &-buttons {
