about page modification

--- a/components/about.html
+++ b/components/about.html
@@ -2,7 +2,7 @@
     <img src="./assets/about-me.png" alt="About Me Picture">
     <div>
         <h1>Hi there!</h1>
-        <h3>Welcome to my world of visual storytelling! I’m Erica Gaffud, a passionate Frontend Developer and UI/UX Designer 
+        <h3>Welcome to my world of visual storytelling! I’m <span>Erica Gaffud</span>, a passionate <span>Frontend Developer</span> and <span>UI/UX Designer</span> 
             with a keen eye for detail and a deep appreciation for authentic emotions. My work revolves around crafting 
             seamless digital experiences that not only look visually stunning but also feel intuitive and engaging.
         </h3>
@@ -32,6 +32,18 @@
         <span> Mobile First Design </span>
     </div>
 </div>
+<div class="body-about__education">
+    <div class="body-about__education__info">
+        <h1>Bachelor of Science in Computer Engineering</h1>
+        <h2>Cagayan State University - Carig Campus <br>
+            Tuguegarao City, Cagayan <br>
+            2018 - 2022</h2>
+    </div>
+    <img src="./assets/graduates.png" alt="Graduation Picture">
+    <div class="body-about__education__quote">
+        <h3>Education is the key that unlocks the doors to endless possibilities.</h3>
+    </div>
+</div>
 <div class="body-about__quote">
     <h1>A designer passionate about creating beautiful user friendly products.</h1>
 </div>
@@ -47,6 +59,7 @@
             <h4>Mobile First Design.</h4>
             <h4>Unit testing in C# using NUnit.</h4>
             <h4>Mobile development using Ionic angular framework.</h4>
+            <h4>UI/UX design using Figma.</h4>
             <h4>Developed the design and prototype of various projects.</h4>
             <h4>Build applications.</h4>
             <h4>Agile project management.</h4>
@@ -78,20 +91,12 @@
         </div>
     </div>
 </div>
-<div class="body-about__education">
-    <div class="body-about__education__info">
-        <h1>Bachelor of Science in Computer Engineering</h1>
-        <h2>Cagayan State University - Carig Campus <br>
-            Tuguegarao City, Cagayan <br>
-            2018 - 2022</h2>
-    </div>
-    <img src="./assets/graduates.png" alt="Graduation Picture">
-    <div class="body-about__education__quote">
-        <h3>Education is the key that unlocks the doors to endless possibilities.</h3>
-    </div>
-</div>
 <div class="body-about__proficiency">
     <h1>Proficiency</h1>
+    <div>
+        <img src="./assets/proficiency/FIGMA.png" alt="Figma">
+        <img src="./assets/proficiency/POSTMAN.png" alt="Postman">
+    </div>
     <div>
         <img src="./assets/proficiency/HTML.png" alt="HTML">
         <img src="./assets/proficiency/CSS.png" alt="CSS">
@@ -113,9 +118,5 @@
         <img src="./assets//proficiency/VISUAL STUDIO.png" alt="Visual Studio">
         <img src="./assets/proficiency/VISUAL STUDIO CODE.png" alt="Visual Studio Code">
         <img src="./assets//proficiency/ANDROID STUDIO.png" alt="Android Studio">
-    </div>
-    <div>
-        <img src="./assets/proficiency/FIGMA.png" alt="Figma">
-        <img src="./assets/proficiency/POSTMAN.png" alt="Postman">
     </div>
 </div>
