--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -3,7 +3,7 @@
 }
 
 .body-about {
-    padding-block: clamp(3rem, 2.545rem + 2.276vw, 4rem);
+    padding-block-start: clamp(3rem, 2.545rem + 2.276vw, 4rem);
     
     &__hero {
         margin-inline: var(--margin-inline);
@@ -26,11 +26,15 @@
             letter-spacing: 0.04em;
             line-height: 149.42%;
             font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
+
+            span {
+                font-weight: bold;
+            }
         }
     }
 
     &__mycareer {
-        background: rgba(216, 182, 164, 0.4); 
+        background: var(--tertiary-color); 
         text-align: center;
         padding-inline: var(--margin-inline);
         padding-block: clamp(2rem, 1.317rem + 3.414vw, 3.5rem);
@@ -42,7 +46,8 @@
         }
 
         h3 {
-            margin-block: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+            margin-block-start: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+            margin-block-end: clamp(2rem, 1.519rem + 2.801vw, 6rem);
             letter-spacing: 0.04em;
             line-height: 149.42%;
             font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
@@ -181,14 +186,16 @@
     }
 
     &__proficiency {
-        margin-inline: var(--margin-inline);
-        padding-block-start: clamp(2rem, 1.317rem + 3.414vw, 3.5rem);
+        padding-inline: var(--margin-inline);
+        padding-block: clamp(2rem, 1.317rem + 3.414vw, 3.5rem);
+        background-color: var(--tertiary-color);
 
         h1 {
             color: var(--primary-color);
             font-size: clamp(2rem, 1.09rem + 4.552vw, 4rem);
-            margin-bottom: clamp(1rem, 0.545rem + 2.276vw, 2rem);
+            margin-bottom: clamp(1rem, 0.759rem + 1.4vw, 3rem);
             text-align: center;
+            font-weight: bold;
         }
 
         div {
@@ -202,13 +209,13 @@
             }
         }
 
-        div:nth-child(2),
         div:nth-child(3),
-        div:nth-child(4) {
+        div:nth-child(4),
+        div:nth-child(5) {
             grid-template-columns: repeat(3, 1fr);
         }
 
-        div:nth-child(5) {
+        div:nth-child(2) {
             grid-template-columns: repeat(2, 1fr);
         }
     }
@@ -247,8 +254,8 @@
         }
 
         &__mycareer {
-            display: flex;
-            gap: clamp(2rem, -0.667rem + 4.167vw, 6rem);
+            // display: flex;
+            // gap: clamp(2rem, -0.667rem + 4.167vw, 6rem);
             text-align: start;
             align-items: start;
             padding-block: clamp(5rem, -5rem + 15.625vw, 20rem);
@@ -280,6 +287,7 @@
             display: grid;
             grid-template-columns: 1fr 2fr;
             align-items: center;
+            margin-block: 5rem;
 
             h1 {
                 grid-row: 1/span 3;
@@ -315,17 +323,17 @@
 
         &__proficiency {
             div {
-                margin-block: clamp(4rem, 2rem + 3.125vw, 7rem);
+                margin-block: clamp(3rem, 1.667rem + 2.083vw, 5rem);
 
                 img {
-                    width: clamp(6rem, 4rem + 3.125vw, 9rem);
+                    width: clamp(4rem, 2rem + 3.125vw, 7rem);
                 }
             }
-            div:nth-child(2) {
+            div:nth-child(3) {
                 grid-template-columns: repeat(6, 1fr);
             }
-            div:nth-child(3),
-            div:nth-child(4) {
+            div:nth-child(4),
+            div:nth-child(5) {
                 grid-template-columns: repeat(5, 1fr);
             }
         }
